Fix alignment of newsletter inputs

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5303,7 +5303,7 @@ header {
       margin-top: -0.1875rem;
       outline: none;
       padding: 1rem 0;
-      width: 70%; }
+      width: 68%; }
       @media (min-width: 980px) {
         .newsletter-block .newsletter-info input {
           width: 50%; } }
