--- a/assets/sass/modules/_newsletter.scss
+++ b/assets/sass/modules/_newsletter.scss
@@ -46,7 +46,7 @@
       margin-top: rem(-3);
       outline: none;
       padding: 1rem 0;
-      width: 70%;
+      width: 68%;
 
       @include mq(d) {
         width: 50%;
